@@ -151,8 +151,8 @@ class StaticURLInfo(object):
             extra['view_permission'] = permission
             extra['view'] = view
 
-            # register a route using the computed view, permission, and pattern,
-            # plus any extras passed to us via add_static_view
+            # register a route using the computed view, permission, and 
+            # pattern, plus any extras passed to us via add_static_view
             pattern = "%s*subpath" % name # name already ends with slash
             self.config.add_route(name, pattern, **extra)
             self.registrations.append((name, spec, False))
@@ -208,12 +208,44 @@ class static_view(object):
         self.app = app
 
     def __call__(self, context, request):
-        subpath = '/'.join(request.subpath)
-        request_copy = request.copy()
-        # Fix up PATH_INFO to get rid of everything but the "subpath"
-        # (the actual path to the file relative to the root dir).
-        request_copy.environ['PATH_INFO'] = '/' + subpath
-        # Zero out SCRIPT_NAME for good measure.
-        request_copy.environ['SCRIPT_NAME'] = ''
-        return request_copy.get_response(self.app)
+        # Point PATH_INFO to the static file/dir path; point SCRIPT_NAME
+        # to the prefix before it.
 
+        # Postconditions:
+        # - SCRIPT_NAME and PATH_INFO are empty or start with /
+        # - At least one of SCRIPT_NAME or PATH_INFO are set.
+        # - SCRIPT_NAME is not '/' (it should be '', and PATH_INFO should
+        #   be '/').
+
+        request_copy = request.copy()
+        script_name = request_copy.environ.get('SCRIPT_NAME', '')
+        path_info = request_copy.environ.get('PATH_INFO', '/')
+
+        new_script_name = script_name
+        new_path_info = path_info
+
+        subpath = list(request.subpath)
+
+        if subpath:
+            # compute new_path_info
+            new_path_info = '/' + '/'.join(subpath)
+            if path_info.endswith('/'):
+                # readd trailing slash stripped by subpath (traversal) 
+                # conversion
+                new_path_info += '/'
+
+            # compute new_script_name
+            tmp = []
+            workback = (script_name + path_info).split('/')
+            while workback:
+                el = workback.pop()
+                if el:
+                    tmp.insert(0, el)
+                if tmp == subpath:
+                    new_script_name = '/'.join(workback)
+                    break
+        
+        request_copy.environ['SCRIPT_NAME'] = new_script_name
+        request_copy.environ['PATH_INFO'] = new_path_info
+
+        return request_copy.get_response(self.app)
